@@ -1,6 +1,6 @@
 # initramfs.conf
 # thomas@linuxmuster.net
-# 28.06.2016
+# 20160726
 
 # busybox
 dir /bin 755 0 0
@@ -137,6 +137,7 @@ slink /sbin/mount.ntfs-3g ../bin/ntfs-3g 755 0 0
 
 # ntfsprogs
 file /bin/ntfsclone ../../src/ntfs-3g/ntfsprogs/.libs/ntfsclone 755 0 0
+file /bin/ntfsfix ../../src/ntfs-3g/ntfsprogs/.libs/ntfsfix 755 0 0
 file /bin/ntfslabel ../../src/ntfs-3g/ntfsprogs/.libs/ntfslabel 755 0 0
 file /bin/ntfsresize ../../src/ntfs-3g/ntfsprogs/.libs/ntfsresize 755 0 0
 file /bin/mkntfs ../../src/ntfs-3g/ntfsprogs/.libs/mkntfs 755 0 0
