@@ -1,6 +1,6 @@
 # initramfs.conf
 # thomas@linuxmuster.net
-# 20160724
+# 20160726
 
 # busybox
 dir /bin 755 0 0
@@ -139,6 +139,7 @@ slink /sbin/mount.ntfs-3g ../bin/ntfs-3g 755 0 0
 
 # ntfsprogs
 file /bin/ntfsclone ../../src64/ntfs-3g/ntfsprogs/.libs/ntfsclone 755 0 0
+file /bin/ntfsfix ../../src64/ntfs-3g/ntfsprogs/.libs/ntfsfix 755 0 0
 file /bin/ntfslabel ../../src64/ntfs-3g/ntfsprogs/.libs/ntfslabel 755 0 0
 file /bin/ntfsresize ../../src64/ntfs-3g/ntfsprogs/.libs/ntfsresize 755 0 0
 file /bin/mkntfs ../../src64/ntfs-3g/ntfsprogs/.libs/mkntfs 755 0 0
