@@ -1,1 +1,1 @@
-LINBO 2.3.1-1
+LINBO 2.3.2-0
